# vox_

./: .gitignore  README.md  main.py  pyproject.toml
en/: reported.tsv
pre_processing/: load_and_filter.py  pandas_filter.py  save_subset.py
processing/: copy_audio.py  copy_files.py  load_and_filter.py  save_subset.py
scripts/: accent_column_explore.py  copy_audio.py  copy_files.py  explore_tsv.py  filter_tsv.py  lean_filter_tsv.py  list_all_files.py  list_local_files.py
